CSS: Fix footer padding
Footer not showing properly, changed padding to copyright text showing
up as it should.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,7 +2594,7 @@
 		border-top: 0;
 		color: #c0c0c0;
 		overflow: hidden;
-		padding: 4em 0 2em 0;
+		padding: 2em 0 0 0;
 	}
 
 		#footer .copyright {
@@ -2605,7 +2605,7 @@
 
 			#footer .copyright li {
 				border-left: solid 1px #d4d4d4;
-				display: inline-block;
+#				display: inline-block;
 				font-size: 0.8em;
 				margin-left: 1em;
 				padding-left: 1em;
